@@ -2,8 +2,11 @@ package raisetech.StudentManagement.controller.converter;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
+import raisetech.StudentManagement.data.CourseStatus;
 import raisetech.StudentManagement.data.Student;
 import raisetech.StudentManagement.data.StudentCourse;
 import raisetech.StudentManagement.domain.StudentDetail;
@@ -22,19 +25,29 @@ public class StudentConverter {
    * @return 受講生詳細情報のリスト
    */
   public List<StudentDetail> convertStudentDetails(List<Student> studentList,
-      List<StudentCourse> studentCourseList) {
+      List<StudentCourse> studentCourseList, List<CourseStatus> courseStatusList) {
     List<StudentDetail> studentDetails = new ArrayList<>();
-    studentList.forEach(student -> {
-      StudentDetail studentDetail = new StudentDetail();
-      studentDetail.setStudent(student);
+    studentList.stream()
+        .forEach(student -> {
+          StudentDetail studentDetail = new StudentDetail();
+          studentDetail.setStudent(student);
 
-      List<StudentCourse> convertStudentCourseList = studentCourseList.stream()
-          .filter(StudentCourse -> student.getId().equals(StudentCourse.getStudentId()))
-          .collect(Collectors.toList());
+          List<StudentCourse> convertStudentCourseList = studentCourseList.stream()
+              .filter(course -> Objects.equals(course.getStudentId(), student.getId()))
+              .toList();
+          studentDetail.setStudentCourseList(convertStudentCourseList);
 
-      studentDetail.setStudentCourseList(convertStudentCourseList);
-      studentDetails.add(studentDetail);
-    });
+          Set<Integer> courseId = convertStudentCourseList.stream()
+              .map(StudentCourse::getId)
+              .collect(Collectors.toSet());
+
+          List<CourseStatus> relatedStatus = courseStatusList.stream()
+              .filter(status -> courseId.contains(status.getCourseId()))
+              .toList();
+          studentDetail.setCourseStatusList(relatedStatus);
+
+          studentDetails.add(studentDetail);
+        });
     return studentDetails;
   }
 
